<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#d9e5eb">


    <TableLayout
        android:layout_marginTop="120dp"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Account1"/>
            <EditText
                android:id="@+id/account"
                android:layout_weight="3"
                android:layout_height="wrap_content"
                android:hint="@string/Ahint"/>
        </TableRow>
        <TableRow>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/Passedword1"/>
            <EditText
                android:layout_height="wrap_content"
                android:inputType="textPassword"
                android:id="@+id/password"
                android:hint="@string/Phint"/>
        </TableRow>
        <TableRow>
            <Button
                android:id="@+id/button1"
                android:layout_height="wrap_content"
                android:layout_span="2"
                android:text="@string/login1"/>
        </TableRow>
    </TableLayout>
    <ProgressBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/progress_bar"/>
</LinearLayout>
